# LindeBuzoGrayStippling

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
shader/: Voronoi.frag  Voronoi.vert
src/: lbgstippling.cpp  lbgstippling.h  mainwindow.cpp  mainwindow.h  settingswidget.cpp  settingswidget.h  stippleviewer.cpp  stippleviewer.h  voronoicell.cpp  voronoicell.h  voronoidiagram.cpp  voronoidiagram.h  voronoithread.cpp  voronoithread.h
src/shader/: Voronoi.frag.h  Voronoi.vert.h
